NetBSD Problem Report #42546

From leo@slug.localdomain  Wed Dec 30 19:00:14 2009
Return-Path: <leo@slug.localdomain>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id EE99B63B844
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 30 Dec 2009 19:00:13 +0000 (UTC)
Message-Id: <20091230190011.8253368843@slug.localdomain>
Date: Wed, 30 Dec 2009 20:00:11 +0100 (CET)
From: leo@marco.de
Reply-To: leo@marco.de
To: gnats-bugs@gnats.NetBSD.org
Subject: wireless usb mouse not recognized
X-Send-Pr-Version: 3.95

>Number:         42546
>Category:       kern
>Synopsis:       wireless usb mouse not recognized
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Dec 30 19:05:00 +0000 2009
>Closed-Date:    Sun Apr 25 09:11:57 +0000 2010
>Last-Modified:  Sun Apr 25 09:11:57 +0000 2010
>Originator:     leo@marco.de
>Release:        NetBSD 5.99.23
>Organization:
Matthias Pfaller                            Software Entwicklung
marco Systemanalyse und Entwicklung GmbH    Tel   +49 8131 5161 41
Hans-Böckler-Str. 2, D 85221 Dachau         Fax   +49 8131 5161 66
http://www.marco.de/                        Email leo@marco.de
>Environment:


System: NetBSD slug 5.99.23 NetBSD 5.99.23 (SLUG) #38: Tue Dec 29 16:10:09 CET 2009 leo@slug:/usr/src/sys/arch/i386/compile/SLUG i386
Architecture: i386
Machine: i386
>Description:
	I have a wireless usb mouse
		Dec 22 19:38:38 slug /netbsd: uhidev2 at uhub0 port 1 configuration 1 interface 0
		Dec 22 19:38:38 slug /netbsd: uhidev2: Mosart Wireless Mouse, rev 1.10/1.00, addr 2, iclass 3/1
		Dec 22 19:38:38 slug /netbsd: uhidev2: 225 report ids
		Dec 22 19:38:38 slug /netbsd: uhid1 at uhidev2 reportid 17: input=6, output=0, feature=0
		Dec 22 19:38:38 slug /netbsd: uhid2 at uhidev2 reportid 224: input=0, output=0, feature=4
		Dec 22 19:38:38 slug /netbsd: uhid3 at uhidev2 reportid 225: input=0, output=0, feature=15
	that is not recognized by netbsd.
	The reason is, that it identifies itself as a pointer device and not
	as a mouse. I do not know what the difference between a pointer device
	and a mouse device should be, but the appended patch fixes the problem
	for me. But it might still be very wrong...

>How-To-Repeat:
	Try to use a mosart wireless mouse
>Fix:
	apply this patch:
Index: ums.c
===================================================================
RCS file: /cvsroot/src/sys/dev/usb/ums.c,v
retrieving revision 1.77
diff -u -w -u -r1.77 ums.c
--- ums.c	27 Nov 2009 08:35:05 -0000	1.77
+++ ums.c	30 Dec 2009 18:59:42 -0000
@@ -137,7 +137,9 @@

 	uhidev_get_report_desc(uha->parent, &desc, &size);
 	if (!hid_is_collection(desc, size, uha->reportid,
-			       HID_USAGE2(HUP_GENERIC_DESKTOP, HUG_MOUSE)))
+			       HID_USAGE2(HUP_GENERIC_DESKTOP, HUG_MOUSE)) &&
+	    !hid_is_collection(desc, size, uha->reportid,
+			       HID_USAGE2(HUP_GENERIC_DESKTOP, HUG_POINTER)))
 		return (UMATCH_NONE);

 	return (UMATCH_IFACECLASS);

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42546 CVS commit: src/sys/dev/usb
Date: Wed, 30 Dec 2009 20:38:47 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Wed Dec 30 20:38:47 UTC 2009

 Modified Files:
 	src/sys/dev/usb: ums.c

 Log Message:
 Apply patch from Matthias Pfaller in PR/42546.

 The USB HUT v1.11 document states that:
     "Typical system software will search for application
      collections tagged with either a Mouse or a Pointer usage."

 This patch adjusts ums(4) to match not only on
 the Mouse usage, but also on the Pointer usage.


 To generate a diff of this commit:
 cvs rdiff -u -r1.77 -r1.78 src/sys/dev/usb/ums.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: matthias@NetBSD.org
State-Changed-When: Sun, 25 Apr 2010 09:11:57 +0000
State-Changed-Why:
patch applied, patch works for submitter (me)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.