Apply patch from Matthias Pfaller in PR/42546.

The USB HUT v1.11 document states that:
    "Typical system software will search for application
     collections tagged with either a Mouse or a Pointer usage."

This patch adjusts ums(4) to match not only on
the Mouse usage, but also on the Pointer usage.